# kaz-gu

./: .gitignore  README.md  main.py  pyproject.toml
01-ipynb/: 00-probability-theory.ipynb  01-mathematical-statistics.ipynb  02-applied-statistics.ipynb  03-finance-statistics.ipynb  appStats.ipynb  mathStats.ipynb  stochasticsFinance.ipynb
01-ipynb/00-probability-theory/: 01-discrete-variables.ipynb  02-continuous-variables.ipynb  02-normal-distribution.ipynb  03-chi-squared-distribution.ipynb  03-z-score.ipynb  04-student-t-distribution.ipynb
01-ipynb/01-mathematical-statistics/: 01-introduction.ipynb  02-estimates.ipynb  03-confidence-intervals.ipynb  03-hypothesis-testing.ipynb  04-student-t-distribution.ipynb  04-z-score.ipynb  06-confidence-intervals.ipynb  07-chi-squared-test.ipynb  08-f-distribution.ipynb
01-ipynb/02-applied-statistics/: 01-ols.ipynb  01-simple-ols.ipynb  02-Cobb-Douglas.ipynb  02-applied-statistics.ipynb  02-multilinear-ols.ipynb  03-heteroscedasticity.ipynb  03-polynomial-regression.ipynb  04-Cobb-Douglas.ipynb  06-autocorrelation.ipynb
01-ipynb/03-finance-statistics/: 01-pricing-models.ipynb  02-portfolio-theory.ipynb
01-ipynb/03-time-series-statistics/: 01-overview.ipynb  02-fundamentals.ipynb  03-stationary.ipynb
01-ipynb/04-finance-statistics/: 03-binomial-models.ipynb  04.ipynb
01-ipynb/05-quantitative-finance/: 01-wacc.ipynb
