[project]
name = "kaz-gu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
