[project]
name = "kaz-gu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hmmlearn>=0.3.3",
    "jupyter-contrib-nbextensions>=0.7.0",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "sympy>=1.14.0",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
